# spend_revenue

./: README.md  pyproject.toml
spend_revenue/revenue/: admin.py  models.py  urls.py  views.py
spend_revenue/revenue/migrations/: 0001_initial.py
spend_revenue/spend/: admin.py  models.py  serializers.py  urls.py  views.py
spend_revenue/spend/migrations/: 0001_initial.py  0002_spendstatistic_revenue.py
spend_revenue/spend_revenue/: asgi.py  settings.py  urls.py  wsgi.py
